// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен вызывать экшены изменения настройки 1`] = `
Array [
  Object {
    "payload": Object {
      "name": "auto_activate_moto_offers",
      "value": 1,
    },
    "type": "UPDATE_SETTING_RESOLVED",
  },
  Object {
    "payload": Object {
      "message": "Данные сохранены",
      "view": "success",
    },
    "type": "NOTIFIER_SHOW_MESSAGE",
  },
]
`;

exports[`должен показать ошибку, если что-то пошло не так 1`] = `
Array [
  Object {
    "payload": Object {
      "message": "Произошла ошибка, попробуйте повторить позже",
      "view": "error",
    },
    "type": "NOTIFIER_SHOW_MESSAGE",
  },
]
`;
